--- a/src/assets/fonts/font.css
+++ b/src/assets/fonts/font.css
@@ -1,26 +1,26 @@
 @font-face {
   font-family: 'Pretendard';
-  src: url('../fonts/Pretendard-Regular.ttf') format('truetype'),
+  src: url('../fonts/Pretendard-Regular.woff2') format('woff2'),
     url('../fonts/Pretendard-Regular.woff') format('woff'),
-    url('../fonts/Pretendard-Regular.woff2') format('woff2');
+    url('../fonts/Pretendard-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Pretendard';
-  src: url('../fonts/Pretendard-SemiBold.ttf') format('truetype'),
+  src: url('../fonts/Pretendard-SemiBold.woff2') format('woff2'),
     url('../fonts/Pretendard-SemiBold.woff') format('woff'),
-    url('../fonts/Pretendard-SemiBold.woff2') format('woff2');
+    url('../fonts/Pretendard-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Pretendard';
-  src: url('../fonts/Pretendard-Bold.ttf') format('truetype'),
+  src: url('../fonts/Pretendard-Bold.woff2') format('woff2'),
     url('../fonts/Pretendard-Bold.woff') format('woff'),
-    url('../fonts/Pretendard-Bold.woff2') format('woff2');
+    url('../fonts/Pretendard-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
